--- a/programs/hotwings/Cargo.toml
+++ b/programs/hotwings/Cargo.toml
@@ -18,6 +18,4 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.30.1"
-anchor-spl = "0.30.1"
-spl-token-2022 = { version = "0.5.0" }  
-spl-token-extension-transfer-hook = "0.1"  
+anchor-spl = { version = "0.30.1", features = ["token"] } 
