--- a/programs/hotwings/Cargo.toml
+++ b/programs/hotwings/Cargo.toml
@@ -13,9 +13,8 @@ default = []
 cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
-no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
+no-log-ix-name = [] 
 
 [dependencies]
 anchor-lang = "0.30.1"
-anchor-spl = { version = "0.30.1", features = ["token"] } 
+anchor-spl = "0.30.1"
